syntax = "proto3";

import "nova/src/proto/engine_state.proto";
// https://github.com/Dig-Doug/rules_typescript_proto/issues/4
//import "google/protobuf/any.proto";
//import "google/protobuf/wrappers.proto";

message SocketMessage { // next = 5
  oneof contents {
	GameMessage data = 2;
	bool ping = 3;
	bool pong = 4;
  }
}

message GameMessage { // next = 2
  oneof messageData {
	EngineState engineState = 1;
  }
}
service NovaService {
  rpc StateStream(stream EngineState) returns (stream EngineState);
}