syntax = "proto3";
import "nova/src/proto/space_object_state_value.proto";
import "nova/src/proto/outfit_state.proto";
import "nova/src/proto/map_keys.proto";

/**
 * SpaceObjectState contains information on the location and movement
 * of an object in a system. This includes information on planets, 
 * ships, and (in the future) asteroids, and projectiles.
 */
message SpaceObjectState { // Next = 4
  SpaceObjectStateValue value = 1;
  map<string, OutfitState> outfits = 2;
  MapKeys outfitsKeys = 3;
}